--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.10.0"
+  },
+  "dependencies": {
+    "@studio-freight/lenis": "^1.0.33",
+    "gsap": "^3.12.4"
   }
 }
